examples/errors/test_multiple_errors.flow
int 42 -> print
string "test" ->
file : -> content